# youtube-contagion-modelling

./: .gitignore  ContagionModels_FTX_SEIR.ipynb  ContagionModels_FTX_SEIRS.ipynb  ContagionModels_FTX_SEIRS_I1_inf.ipynb  ContagionModels_FTX_SEIR_I1_inf.ipynb  ContagionModels_FTX_SIR.ipynb  ContagionModels_FTX_SIRS.ipynb  ContagionModels_FTX_SIRS_I1_inf.ipynb  ContagionModels_FTX_SIR_I1_inf.ipynb  ContagionModels_FTX_Visualisation.ipynb  ContagionModels_Utils.ipynb  Contagion_Meso_Macro_Visualisation.ipynb  Parameters.xlsx  README.md  pyproject.toml
