[project]
name = "youtube-contagion-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "import-ipynb>=0.2",
    "lmfit>=1.3.4",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
    "tellurium==2.2.8",
]
